fix: remove page overflow on opened modal

--- a/src/index.css
+++ b/src/index.css
@@ -52,3 +52,7 @@ p {
 input {
   font-family: inherit;
 }
+
+body:has([data-modal]) {
+  overflow: hidden;
+}
